<resources>
    <string name="app_name">ProyectoPGL</string>
    <string name="reserva">Reserva de %1$s el dia %2$s a las %3$s</string>
    <string name="formulario_de_reserva">Formulario de reserva</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="confirmar">Confirmar</string>
    <string name="campos_incompletos">Por favor, completa todos los campos.</string>
    <string name="bonos">Bonos</string>
    <string name="bonosmenu">Usted se encuentra en bonos</string>
    <string name="reservas">Reservas</string>
    <string name="reservasmenu">Usted se encuentra en reservas</string>
    <string name="preferencias_de_usuario">Preferencias de usuario</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="confirmar_salida">Confirmar salida</string>
    <string name="estas_seguro_que_deseas_salir">¿Estas seguro que deseas salir de la aplicacion?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="informacion">Información de la aplicación</string>
    <string name="descripcion_app">Esta aplicacion fue desarrollada por Ismael Medina Waló para realizar reservas de forma sencilla y eficiente. Versión 1.0.0.</string>
    <string name="cerrar">Cerrar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre_apellidos_invalidos">El nombre y los apellidos deben tener al menos 2 caracteres.</string>
    <string name="nombre_apellidos_solo_letras">El nombre y los apellidos solo pueden contener letras y espacios.</string>
    <string name="email_invalido">El correo electrónico no es válido.</string>
    <string name="fecha_hora_pasadas">La fecha y hora no pueden ser del pasado.</string>
</resources>