<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FormularioActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2196F3"
        android:elevation="4dp"
        android:title="Formulario"
        android:titleTextColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:id="@+id/textViewContacto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formulario_de_reserva"
                android:textSize="30sp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:errorEnabled="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/textViewContacto">

                <EditText
                    android:id="@+id/editTextNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutNombre"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:errorEnabled="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <EditText
                    android:id="@+id/editTextApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    android:singleLine="true"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInputLayoutApellidos"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:errorEnabled="true"
                app:startIconDrawable="@drawable/baseline_mark_as_unread_24"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <EditText
                    android:id="@+id/editTextCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo_electr_nico"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:backgroundTint="#2196F3"
                android:layout_below="@+id/textInputLayoutCorreo"
                android:layout_marginStart="60dp"/>

            <Button
                android:id="@+id/buttonHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora"
                android:backgroundTint="#2196F3"
                android:layout_below="@+id/textInputLayoutCorreo"
                android:layout_marginStart="200dp"/>

            <Button
                android:id="@+id/buttonConfirmar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:backgroundTint="#3F51B5"
                android:layout_below="@+id/buttonFecha"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>